--- a/test.ipynb
+++ b/test.ipynb
@@ -342,6 +342,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat = df.columns[df.dtypes=='object']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
