--- a/Kmeans/kmeans.ipynb
+++ b/Kmeans/kmeans.ipynb
@@ -4634,6 +4634,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Spending</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Label</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>45.523810</td>\n",
+       "      <td>26.285714</td>\n",
+       "      <td>19.380952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41.264706</td>\n",
+       "      <td>88.500000</td>\n",
+       "      <td>16.764706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32.692308</td>\n",
+       "      <td>86.538462</td>\n",
+       "      <td>82.128205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56.333333</td>\n",
+       "      <td>54.266667</td>\n",
+       "      <td>49.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>56.657895</td>\n",
+       "      <td>49.131579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.260870</td>\n",
+       "      <td>77.608696</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Age     Income   Spending\n",
+       "Label                                 \n",
+       "0      45.523810  26.285714  19.380952\n",
+       "1      41.264706  88.500000  16.764706\n",
+       "2      32.692308  86.538462  82.128205\n",
+       "3      56.333333  54.266667  49.066667\n",
+       "4      27.000000  56.657895  49.131579\n",
+       "5      25.000000  25.260870  77.608696"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C2 = X2.groupby(by='Label').mean()\n",
+    "C2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4642,7 +4741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -5471,6 +5570,33 @@
           74,
           18,
           83
+         ]
+        },
+        {
+         "type": "scatter3d",
+         "x": [
+          45.523809523809526,
+          41.26470588235294,
+          32.69230769230769,
+          56.333333333333336,
+          27,
+          25
+         ],
+         "y": [
+          26.285714285714285,
+          88.5,
+          86.53846153846153,
+          54.266666666666666,
+          56.6578947368421,
+          25.26086956521739
+         ],
+         "z": [
+          19.38095238095238,
+          16.764705882352942,
+          82.12820512820512,
+          49.06666666666667,
+          49.13157894736842,
+          77.6086956521739
          ]
         }
        ],
@@ -6383,7 +6509,8 @@
    "source": [
     "import plotly.express as px\n",
     "fig = px.scatter_3d(data_frame=X2, x='Age', y='Income', z='Spending', color='Label')\n",
-    "fig.show()"
+    "fig.add_scatter3d(x=C2['Age'], y=C2['Income'], z=C2['Spending'])\n",
+    "fig.show()\n"
    ]
   },
   {
@@ -6480,10 +6607,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "C2 = X2.groupby(by='Label').mean()\n",
-    "C2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
